# hackattic

./: Cargo.toml  README.md
src/: main.rs
src/challenges/: backup_restore.rs  basic_face_detection.rs  brute_force_zip.rs  collision_course.rs  dockerized_solutions.rs  help_me_unpack.rs  jotting_jwts.rs  mini_miner.rs  mod.rs  password_hashing.rs  reading_qr.rs  tales_of_ssl.rs  visual_basic_math.rs
src/utils/: hackattic_client.rs  mod.rs  zip.rs
